Fix spacing issues in main.css

--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,8 @@ h2 {
 
 ul {
   list-style-type: none;
-  padding: 2rem;
-  margin: 0;
+  padding: 0;
+  margin: 1.5rem;
 }
 
 a {
@@ -36,12 +36,18 @@ a {
 
 li {
   display: flex;
-  justify-content: space-between;
-
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  padding: 2rem 0;
 }
 
 img {
   width: 5rem;
+}
+
+hgroup {
+  width: 16rem;
 }
 
 h3 {
@@ -50,4 +56,8 @@ h3 {
 
 h4 {
   margin: 0;
+}
+
+p {
+  width: 24rem;
 }
